# Game

./: .gitignore  CMakeLists.txt  Game.cpp  actor.h  af.cpp  asset_manager.h  bullet.h  bulletDebugDraw.h  camera.h  camera_controller.h  cell.h  cell_enum.h  collectable.h  enemy.h  font.h  font_character.h  game_actor.h  image_loader.h  level_manager.h  main.rc  material.h  mesh.h  mesh_instance.h  mesh_instance_spawner.h  model_loader.h  models.h  obstacle.h  packed_shaders.h  packer.py  player.h  player_controller.h  point_light.h  random.h  rigidbody.h  scene.h  shader.h  shader_packer.py  shaders.h  ship.h  sound.h  (+4 more)
ASSETS/: level0.map
ASSETS/shaders/: font.fragment  font.vertex  standart.fragment  standart.vertex
enc_temp_folder/b6617945b6fcf338d7ad6ba3a482d44/: actor.h
lib/Debug/: glfw3.lib
lib/Release/: glew32s.lib  glfw3.lib
